--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,11 @@
 /tmp
 .byebug_history
 /public/uploads
+debug.byebug_history
+.byebug_history
+coverage
+/coverage
+coverage/index.html
+public/upload
+public/uploads
+coverage/
